# python-cv-dev-extension

./: .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DOCKER_VOLUMES_MIGRATION.md  Dockerfile  FAQ.md  QUICKSTART.md  README.md  RKNN_FIXES.md  TODO.md  WORKFLOWS.md  bsext_init  build  build_plan.md  check-prerequisites  check-recipe-syntax.py  check_recipes.py  dnn_fix.md  gap_plan.md  missing_packages_analysis.txt  model-licenses.md  package  package-dev-to-target.sh  package-extension.sh  patch-n-build.sh  plan.md  requirements-analysis.md  rknn_executor_patched.py  setup  setup.sh  test-individual-package.sh  test-package.sh  test_cv_packages.py  todo.md  validate  validate-build.sh  verify_checksums.py  wmt-test.py  (+1 more)
.claude/: settings.local.json
.claude/commands/: commit.yml  deploy.yml
.claude/session-logs/: 2025-01-28-1430-explore-installing-wheels.md  2025-01-28-1642-rknn-executive-review.md  2025-01-31-1400-os-9.1.79.3-resolution.md  2025-02-14-1700-npu-validation-success.md  2025-10-14-1143-model-zoo-compatibility.md  2025-10-21-1308-fix-lib64-readonly-filesystem.md
bsoe-recipes/meta-bs/classes/: nfsquick.bbclass
bsoe-recipes/meta-bs/conf/: layer.conf
bsoe-recipes/meta-bs/conf/distro/: brightsign.conf
bsoe-recipes/meta-bs/conf/machine/: cobra.conf
bsoe-recipes/meta-bs/recipes-devtools/python/: python3-scikit-image_0.17.2.bb  python3-scikit-image_0.19.3.bb  recipe-template.bb
bsoe-recipes/meta-bs/recipes-open/brightsign-sdk/: brightsign-sdk.bb
bsoe-recipes/meta-bs/recipes-open/librknnrt/: librknnrt_2.3.2.bb
bsoe-recipes/meta-bs/recipes-open/opencv/: opencv_4.5.5.bb
bsoe-recipes/meta-bs/recipes-open/packagegroup-rknn/: packagegroup-rknn.bb
bsoe-recipes/meta-bs/recipes-open/python3-fast-histogram/: python3-fast-histogram_0.11.bb
bsoe-recipes/meta-bs/recipes-open/python3-filelock/: python3-filelock_3.16.1.bb
bsoe-recipes/meta-bs/recipes-open/python3-flatbuffers/: python3-flatbuffers_24.3.25.bb
bsoe-recipes/meta-bs/recipes-open/python3-fsspec/: python3-fsspec_2024.6.1.bb
bsoe-recipes/meta-bs/recipes-open/python3-jinja2/: python3-jinja2_3.1.6.bb
bsoe-recipes/meta-bs/recipes-open/python3-markupsafe/: python3-markupsafe_2.1.5.bb
bsoe-recipes/meta-bs/recipes-open/python3-mpmath/: python3-mpmath_1.3.0.bb
bsoe-recipes/meta-bs/recipes-open/python3-networkx/: python3-networkx_3.1.bb
bsoe-recipes/meta-bs/recipes-open/python3-onnx/: python3-onnx_1.16.1.bb
bsoe-recipes/meta-bs/recipes-open/python3-onnxoptimizer/: python3-onnxoptimizer_0.2.7.bb
bsoe-recipes/meta-bs/recipes-open/python3-onnxruntime/: python3-onnxruntime_1.16.0.bb
bsoe-recipes/meta-bs/recipes-open/python3-protobuf/: python3-protobuf_3.20.3.bb
bsoe-recipes/meta-bs/recipes-open/python3-psutil/: python3-psutil_5.9.0.bb
bsoe-recipes/meta-bs/recipes-open/python3-pybind11/: python3-pybind11_2.11.1.bb
bsoe-recipes/meta-bs/recipes-open/python3-rknn-toolkit2/: python3-rknn-toolkit2_2.3.0.bb  python3-rknn-toolkit2_2.3.2.bb
bsoe-recipes/meta-bs/recipes-open/python3-ruamel-yaml/: python3-ruamel-yaml_0.17.21.bb
bsoe-recipes/meta-bs/recipes-open/python3-scipy/: python3-scipy_1.10.1.bb
bsoe-recipes/meta-bs/recipes-open/python3-sympy/: python3-sympy_1.13.3.bb
bsoe-recipes/meta-bs/recipes-open/python3-torch/: python3-torch_2.0.1.bb  python3-torch_2.2.0.bb
bsoe-recipes/meta-bs/recipes-open/python3-tqdm/: python3-tqdm_4.64.1.bb
bsoe-recipes/meta-bs/recipes-open/python3-typing-extensions/: python3-typing-extensions_4.13.2.bb
cmake/: FindTurboJPEG.cmake
docs/: README.md  architecture-understanding.md  build-process.md  deployment.md  executive-summary-rknn-fix.md  getting-started.md  hardware-validation-protocol.md  model-zoo-guide.md  npu-inference-testing.md  os-9.1.79.3-testing-protocol.md  troubleshooting-user-init.md  troubleshooting.md
docs/adr/: README.md  adr-001-cross-architecture-wheel-installation.md  adr-002-three-environment-build-architecture.md  adr-003-package-preinstall-vs-runtime-install.md
include/: frame_writer.h  inference.h  postprocess.h  publisher.h  queue.h  queue.tpp  transport.h  utils.h  yolo.h
plans/: fix-librknnrt.md
scripts/: setup-patches.sh
sh/: bsext_init  check-status  cleanup-extension  init-extension  make-extension-lvm  patch-local-conf.sh  pydev-env  run-user-init  setup_python_env  test_python_imports  uninstall.sh
src/: frame_writer.cpp  image_utils.c  inference.cpp  main.cpp  postprocess.cc  publisher.cpp  queue.cpp  utils.cc  yolo.cc
src/transports/: file_transport.cpp  udp_transport.cpp
user-init/: README.md
user-init/examples/: 01_validate_cv.sh  README.md  requirements.txt  test_cv_packages.py  test_yolox_npu.py
user-init/templates/: basic_script.sh  python_wrapper.sh  requirements_template.txt
user-init/tools/: deploy-to-player.sh
